# visual_based_planning

./: CLAUDE.md  CMakeLists.txt  package.xml  planner_experiments_results.txt  readme.txt
claude_context/: 1_introduction.tex  2_Related_work.tex  3_Preliminaries.tex  4_Method.tex  5_Experiments.tex  VisTSP_frameworks.txt  VisTSP_missing_components.txt  VisTSP_problem.txt  global_plan.txt  local_VisTSP.txt  project_map.txt
config/: planner_config.yaml  sampling_regions.yaml  sampling_regions_double_room.yaml  targets.yaml
include/visual_based_planning/: VisualPlanner.h
include/visual_based_planning/common/: Types.h
include/visual_based_planning/components/: PathExecuter.h  PathSmoother.h  Sampler.h  ValidityChecker.h  VisualIK.h
include/visual_based_planning/data_structures/: Graph.h  NearestNeighbor.h  VisibilityIntegrity.h  VisibilityIntegrity_new.h  VisibilityIntegrity_old.h  VisibilityOracle.h  VisibilityOracleGPU.h  VisibilityRoadmap.h  visibility_oracle.h
include/visual_based_planning/planners/: PlannerFactory.h  PlanningContext.h  VisPRMPlanner.h  VisRRTPlanner.h  VisibilityPlannerBase.h
launch/: visual_ik_client.launch  visual_planner.launch
msg/: VisibilityTask.msg
src/: VisibilityOracleGPU.cu  experiment_runner.cpp  visual_ik_client.cpp  visual_ik_server.cpp  visual_planner.cpp  visual_planning_client.cpp  visual_planning_node.cpp
srv/: PlanVisibilityPath.srv  VisualIK.srv
